--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Address</h3>
-		            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+		            <p>No. 42/2, Yagodamulla Kotugoda.</p>
 		          </div>
 	          </div>
           </div>
@@ -716,9 +716,9 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>
-								My experience of over 10 years extends to various industries in the local and international markets. I have gained international exposure in the United Kingdom and possess the ability to understand and differentiate working styles in a multinational environment.
-							</p>
+              	<p>
+					My experience of over 10 years extends to various industries in the local and international markets. I have gained international exposure in the United Kingdom and possess the ability to understand and differentiate working styles in a multinational environment.
+				</p>
             </div>
           </div>
           <div class="col-md">
