added new files

--- a/index copy.html
+++ b/index copy.html
@@ -36,9 +36,9 @@
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
+	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
-	          <!-- <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li> -->
+	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -100,6 +100,7 @@
 	                <span class="number" data-number="120">0</span>
 	                <span>Project complete</span>
                 </p>
+                <p><a href="Malith_Resume.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -108,122 +109,171 @@
     </section>
 
 
-    <section class="ftco-section ftco-no-pb goto-here" id="projects-section">
+    <section class="ftco-section ftco-no-pb goto-here" id="resume-section">
     	<div class="container">
     		<div class="row">
     			<div class="col-md-3">
 				    <nav id="navi">
 					    <ul>
-					      <li><a href="#page-1">Patten Designs</a></li>
-								<li><a href="#page-2">Translations</a></li>
-								<li><a href="#page-3">Article writting</a></li>
-								<li><a href="#page-4">Data Entry</a></li>
-					      <li><a href="#page-5">Skills</a></li>
+					      <li><a href="#page-1">Education</a></li>
+					      <li><a href="#page-2">Experience</a></li>
+					      <li><a href="#page-3">Skills</a></li>
 					    </ul>
 					  </nav>
 					</div>
 					<div class="col-md-9">
 					  <div id="page-1" class= "page one">
-							<h2 class="heading">Patten Designs</h2>
-							<div class="row">
-								<div class="col-md-6 mb-5">
-									<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/pd-1.png);">
+					  	<h2 class="heading">Education</h2>
+					    <div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">2003 – 2004</span><br>
+									<span class="position">Kingston University (Kingston, England)</span>
+									<p>BEng (Hons) in Mechanical Engineering Design</p>
+	    					</div>
+	    				</div>
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+										<span class="date">2001 – 2003</span><br>
+										<span class="position">Asian Aviation Centre (Sri Lanka)</span>
+										<p>BEng (Hons) in Mechanical Engineering Design</p>
 									</div>
+							</div>
+							<div class="resume-wrap d-flex ftco-animate">
+								<div class="icon d-flex align-items-center justify-content-center">
+									<span class="flaticon-ideas"></span>
 								</div>
-								<div class="col-md-6 mb-5">
-									<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/pd-2.png);">
+								<div class="text pl-3">
+										<span class="date">2001 – 2003</span><br>
+										<span class="position">Asian Aviation Centre (Sri Lanka)</span>
+										<p>Advance Diploma in Management</p>
 									</div>
+							</div>
+							<div class="resume-wrap d-flex ftco-animate">
+								<div class="icon d-flex align-items-center justify-content-center">
+									<span class="flaticon-ideas"></span>
 								</div>
-								<div class="col-md-6 mb-5">
-									<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/pd-3.png);">
+								<div class="text pl-3">
+										<span class="date">2000 – 2001</span><br>
+										<span class="position">Asian Aviation Centre (Sri Lanka)</span>
+										<p>Advance level (English Medium)</p>
 									</div>
-								</div>
-								<div class="col-md-6 mb-5">
-									<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/pd-4.png);">
-									</div>
-								</div>
-								<div class="col-md-6 mb-5">
-									<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/pd-5.png);">
-									</div>
-								</div>
-								<div class="col-md-6 mb-5">
-									<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/pd-6.png);">
-									</div>
-								</div>
-								<div class="col-md-6 mb-5">
-									<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/pd-7.png);">
-									</div>
-								</div>
 							</div>
 					  </div>
 
 					  <div id="page-2" class= "page two">
-					  	<h2 class="heading">Translation</h2>
-					    <div class="row">
-								<div class="col-md-6 mb-5">
-									<a href="files/t1.pdf" target="_blank">
-										<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/t1.png);">
-										</div>
-									</a>
-								</div>
-								<div class="col-md-6 mb-5">
-										<a href="files/t2.pdf" target="_blank">
-											<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/t2.png);">
-											</div>
-										</a>
-								</div>
-								<div class="col-md-6 mb-5">
-										<a href="files/t3.pdf" target="_blank">
-											<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/t3.png);">
-											</div>
-										</a>
-								</div>
-								<div class="col-md-6 mb-5">
-										<a href="files/t4.pdf" target="_blank">
-											<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/t4.png);">
-											</div>
-										</a>
-								</div>
-								<div class="col-md-6 mb-5">
-										<a href="files/t5.pdf" target="_blank">
-											<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/t5.png);">
-											</div>
-										</a>
-								</div>
+					  	<h2 class="heading">Experience</h2>
+					    <div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">Jan 2016 – Present</span>
+		    					<h2>Engineer </h2>
+		    					<span class="position">Akash Boutique Hotel Sri Lanka</span>
+		    					<p>
+										Ensure routine operations of the hotel are carried out effectively through the efficient running of the hotel maintenance department.<br>Support smooth functioning of the hotel in providing comfort to the guests to achieve excellent customer service, by maintenance and service of all the machinery (which includes Split type A/C, Solar hot water panels, Generators, Kitchen equipment, Swimming pool) to prevent sudden breakage and interruptions.
+									</p>
+		    				</div>
+	    				</div>
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">Dec 2013 – Jan 2016</span>
+		    					<h2>Assistant Manager, Technical</h2>
+		    					<span class="position">Edge Properties, The Beach All Suites Hotel, Sri Lanka</span>
+		    					<p>
+										Handle service recovery via complaint management system, liaising with guests and internal departments.<br>
+										Provide suitable Management Information (MI) for Senior Managers' sound decision making and strategic planning through data entry and analysis.
+									</p>
+		    				</div>
+	    				</div>
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">Nov 09 - Dec 13</span>
+		    					<h2>Management Trainee Eng. Dept.</h2>
+		    					<span class="position">Jetwing Lagoon, Thalhena , Sri Lanka</span>
+		    					<p>
+										Manage routine operations of the hotel Engineering Department.<br>
+										Provide maintenance and service to all machinery to ensure smooth flow of hotel operations.(This includes Vapor Absorption Chillier, Hitachi 120T Screw type Chillier, BioMass Boiler,STP system, Agro-nova Compost Machine, Fresh and Hot water systems, 100m Swimming Pool
+									</p>
+		    				</div>
+	    				</div>
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date"> July 07 - March 08</span>
+		    					<h2>Bar Supervisor</h2>
+		    					<span class="position">Mitchells and Butlers (Queen’s Arms Pub), UK</span>
+		    					<p>
+										Daily routine operations of the Pub<br>
+										Weekly and Monthly stock control<br>
+										Making and maintaining a staff roster<br>
+										Staff training on health and safety and basic training<br>
+										Ordering of required stock when needed<br>
+									</p>
+		    				</div>
+	    				</div>
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">Feb 07 -July 07</span>
+		    					<h2>Event Manager cum Staff Recruiter</h2>
+		    					<span class="position">Moving Venue Caters, UK</span>
+		    					<p>
+										Recruit the very best talent through the formal selection and interview process, in compliance with legal and government legislation.<br>
+										Design and deliver training to successful candidates based on relevant client requirements.<br> Plan and coordinate the recruitment needs of a diverse clientele
+									</p>
+		    				</div>
+	    				</div>
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">Aug 06 - Feb 07</span>
+		    					<h2>Junior Consultant</h2>
+		    					<span class="position">People Now Hospitality Recruitment, UK</span>
+		    					<p>
+										Recruit temporary staff though formal selection and interview process, in compliance with legal and government legislation.<br>
+										Design and deliver training to successful candidates based on relevant client requirements.<br>
+										Plan and coordinate the recruitment needs of a diverse clientele
+									</p>
+		    				</div>
 							</div>
-						</div>
-
-						<div id="page-3" class= "page three">
-					  	<h2 class="heading">Article writting</h2>
-					    <div class="row">
-								<div class="col-md-6 mb-5">
-										<a href="files/s1.pdf" target="_blank">
-											<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/s1.png);">
-											</div>
-										</a>
-								</div>
-								<div class="col-md-6 mb-5">
-										<a href="files/s2.pdf" target="_blank">
-											<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/s2.png);">
-											</div>
-										</a>
-								</div>
-							</div>
-						</div>
-
-						<div id="page-4" class= "page four">
-					  	<h2 class="heading">Data Entry</h2>
-					    <div class="row">
-								<div class="col-md-6 mb-5">
-										<a href="files/s3.xlsx" target="_blank">
-											<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/s3.png);">
-											</div>
-										</a>
-								</div>
-							</div>
+							<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">Oct 05 - Aug 06</span>
+		    					<h2>Bar cum Event Manager</h2>
+		    					<span class="position">People Now Recruitment, UK</span>
+		    					<p>
+										Plan and coordinate the Events<br>
+    								Recruiting temporary staff according to the event requirements<br>
+										During the event start and finish making sure the stock is accounted for<br>
+										Allocating staff and overseeing their duties
+									</p>
+		    				</div>
+	    				</div>
 						</div>
 	
-					  <div id="page-5" class= "page five">
+					  <div id="page-3" class= "page three">
 					  	<h2 class="heading">Skills</h2>
 					  	<div class="row progress-circle mb-5">
 					  		<div class="col-lg-6 mb-4">
@@ -432,7 +482,7 @@
 							<div class="desc">
 								<h3 class="mb-5">Translator</h3>
 								<p>
-									3 years experience in Translation (French, German, Japanese, Spanish, Russian)
+									3 years in Translation (French, German, Japanese, Spanish, Russian)
 								</p>
 							</div>
 						</a>
@@ -445,7 +495,7 @@
 							<div class="desc">
 								<h3 class="mb-5">Article writter</h3>
 								<p>
-									3 years experience in Article writing 
+									3 years in Article writing 
 								</p>
 							</div>
 						</a>
@@ -459,7 +509,7 @@
 							<div class="desc">
 								<h3 class="mb-5">Data Entry Operator</h3>
 								<p>
-									4 years experience in Data entry and Collection 
+									4 years in Data entry and Collection 
 								</p>
 							</div>
 						</a>
@@ -469,7 +519,7 @@
     </section>
  
 
-    <!-- <section class="ftco-section ftco-project" id="projects-section">
+    <section class="ftco-section ftco-project" id="projects-section">
     	<div class="container-fluid px-md-0">
     		<div class="row no-gutters justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
@@ -557,7 +607,7 @@
 
     		</div>
     	</div>
-    </section> -->
+    </section>
 
     <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
     	<div class="container-fluid px-md-5">
